noinst_LIBRARIES = libfrequency.a

libfrequency_a_CPPFLAGS = \
	-I$(top_srcdir)/Algorithm \
	-I$(top_srcdir)/Bigraph \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/StringGraph \
	-I$(top_srcdir)/SQG \
	-I$(top_srcdir)/SuffixTools \
	-I$(top_srcdir)/Thirdparty \
	-I$(top_srcdir)/Concurrency \
	-I$(top_srcdir)/FMIndexWalk \
	-I$(top_srcdir)/Thirdparty/rollinghash 

libfrequency_a_SOURCES = \
	FrequencyProcess.h FrequencyProcess.cpp

