noinst_LIBRARIES = libreassembler.a

libreassembler_a_CPPFLAGS = \
	-I$(top_srcdir)/Algorithm \
	-I$(top_srcdir)/Bigraph \
	-I$(top_srcdir)/Util \
	-I$(top_srcdir)/StringGraph \
	-I$(top_srcdir)/SQG \
	-I$(top_srcdir)/SuffixTools \
	-I$(top_srcdir)/Thirdparty \
	-I$(top_srcdir)/Concurrency \
	-I$(top_srcdir)/FMIndexWalk \
	-I$(top_srcdir)/Thirdparty/rollinghash 

libreassembler_a_SOURCES = \
	ReassemblerProcess.h ReassemblerProcess.cpp \
	ContigGraph.h ContigGraph.cpp \
	ContigVertex.h ContigVertex.cpp \
	ContigEdge.h ContigEdge.cpp \
	CGVisitors.h CGVisitors.cpp

